--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   "require": {},
   "autoload": {
     "psr-4": {
-      "SSITU\\Bernardo\\": "src/php"
+      "SSITU\\Bernardo\\": "src"
     }
   }
 }
